[gd_scene load_steps=9 format=2]

[ext_resource path="res://Interface/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Interface/interface.theme" type="Theme" id=2]
[ext_resource path="res://Interface/Font/NationalPark-ExtraBold.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Theme/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Theme/CenterContainer/Main/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Theme/CenterContainer/Main/PlayButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Theme/CenterContainer/Main/SettingsButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Theme/CenterContainer/Main/ExitButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "dissolve"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Theme/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "start"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Theme/CenterContainer/Main/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Theme/CenterContainer/Main/PlayButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 6, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Theme/CenterContainer/Main/SettingsButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 6, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Theme/CenterContainer/Main/ExitButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 6, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="Camera"]
script = ExtResource( 1 )

[node name="Theme" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="Theme"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Main" type="VBoxContainer" parent="Theme/CenterContainer"]
margin_left = 527.0
margin_top = 231.0
margin_right = 752.0
margin_bottom = 488.0
rect_min_size = Vector2( 200, 0 )

[node name="Label" type="Label" parent="Theme/CenterContainer/Main"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 225.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 1 )
text = "Nature
Walk"
align = 1

[node name="PlayButton" type="Button" parent="Theme/CenterContainer/Main"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 165.0
margin_right = 225.0
margin_bottom = 193.0
text = "Play"

[node name="SettingsButton" type="Button" parent="Theme/CenterContainer/Main"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 197.0
margin_right = 225.0
margin_bottom = 225.0
text = "Settings"

[node name="ExitButton" type="Button" parent="Theme/CenterContainer/Main"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 229.0
margin_right = 225.0
margin_bottom = 257.0
text = "Exit"

[node name="Settings" type="VBoxContainer" parent="Theme/CenterContainer"]
visible = false
margin_left = 540.0
margin_top = 273.0
margin_right = 740.0
margin_bottom = 447.0
rect_min_size = Vector2( 200, 0 )

[node name="Label" type="Label" parent="Theme/CenterContainer/Settings"]
margin_right = 200.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Settings"
align = 1

[node name="BackButton" type="Button" parent="Theme/CenterContainer/Settings"]
margin_top = 50.0
margin_right = 200.0
margin_bottom = 78.0
text = "Back"

[node name="HSplitContainer" type="HBoxContainer" parent="Theme/CenterContainer/Settings"]
margin_top = 82.0
margin_right = 200.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="Theme/CenterContainer/Settings/HSplitContainer"]
margin_right = 61.0
margin_bottom = 28.0
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="Theme/CenterContainer/Settings/HSplitContainer"]
margin_left = 65.0
margin_right = 165.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = -80.0
max_value = 0.0
step = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="Theme/CenterContainer/Settings"]
margin_top = 114.0
margin_right = 200.0
margin_bottom = 142.0

[node name="Label" type="Label" parent="Theme/CenterContainer/Settings/HBoxContainer"]
margin_right = 55.0
margin_bottom = 28.0
text = "Mouse"

[node name="MouseSlider" type="HSlider" parent="Theme/CenterContainer/Settings/HBoxContainer"]
margin_left = 59.0
margin_right = 159.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="Theme/CenterContainer/Settings"]
margin_top = 146.0
margin_right = 200.0
margin_bottom = 174.0

[node name="Label" type="Label" parent="Theme/CenterContainer/Settings/HBoxContainer2"]
margin_right = 80.0
margin_bottom = 28.0
text = "Fullscreen"

[node name="FullscreenCheckBox" type="CheckBox" parent="Theme/CenterContainer/Settings/HBoxContainer2"]
margin_left = 84.0
margin_right = 108.0
margin_bottom = 28.0

[node name="ColorRect" type="ColorRect" parent="Theme"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/dissolve = SubResource( 4 )
anims/start = SubResource( 5 )

[connection signal="pressed" from="Theme/CenterContainer/Main/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Theme/CenterContainer/Main/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Theme/CenterContainer/Main/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Theme/CenterContainer/Settings/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="value_changed" from="Theme/CenterContainer/Settings/HSplitContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="value_changed" from="Theme/CenterContainer/Settings/HBoxContainer/MouseSlider" to="." method="_on_MouseSlider_value_changed"]
[connection signal="toggled" from="Theme/CenterContainer/Settings/HBoxContainer2/FullscreenCheckBox" to="." method="_on_FullscreenCheckBox_toggled"]
